# markify

./: BUGFIXES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.production  INSTALL.md  LICENSE  QUICKSTART.md  README.md  demo.sh  docker-compose.yml  fly.toml  run_all_tests.sh
.github/workflows/: ci.yml
HomebrewFormula/: markify.rb
benchmarks/: TEST_PLAN.md  run_benchmarks.py
core/: Cargo.toml
core/src/: cache.rs  cilow.rs  lib.rs  scrape.rs  search.rs  telemetry.rs
core/src/crawl/: engine.rs  mod.rs
core/src/extract/: links.rs  metadata.rs  mod.rs  readability.rs  streaming.rs
core/src/fetch/: browser.rs  http.rs  mod.rs  proxy.rs  router.rs
core/src/index/: dense.rs  hybrid.rs  mod.rs  sparse.rs
core/src/renderless/: mod.rs
core/src/search/: query_understanding.rs  reranker.rs
core/src/structured_api/: executor.rs  extraction.rs  generator.rs  llm.rs  mod.rs  spec.rs  store.rs
core/src/telemetry/: otel.rs
core/src/transform/: json.rs  markdown.rs  mod.rs
core/src/vsb_graph/: classifier.rs  emitter.rs  ml_classifier.rs  mod.rs  segmenter.rs  types.rs
deploy/: deploy.sh  env.template  test-cloud.sh
docs/: API_EXAMPLES.md  ARCHITECTURE.md  api-reference.md  mcp-setup.md  quickstart.md  self-hosting.md
sdks/go/: go.mod
sdks/go/markify/: client.go
sdks/python/: pyproject.toml
sdks/typescript/: package.json
server/: Cargo.toml
server/src/: main.rs  mcp.rs  rest.rs
tests/: test_full_e2e.py
tests/e2e/: integration_tests.rs
