[workspace]
members = [
    "core",
    "server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

# Smaller release binary without sacrificing server throughput (opt-level stays
# at the release default of 3; strip + thin LTO do the size work).
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
