[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markify"
version = "0.1.0"
description = "The Apache-2.0-licensed web data layer for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Markify" },
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/skeehn/markify"
Repository = "https://github.com/skeehn/markify"

[tool.ruff]
line-length = 100
target-version = "py310"
